Greeting Message On Login

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="container">
         <header>
-            <h1>Welcome back, <span id="user">CAS</span></h1>
+            <h1>Welcome back, <span id="user"></span></h1>
             <!-- App logo goes here -->
             <div class="dated-balance">
                 <h3>Current balance</h3>
