--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/01b019755d.js" crossorigin="anonymous"></script>
     <title>Mobile Banking</title>
 </head>
 <body>
@@ -21,9 +22,12 @@
             <h1>Welcome back, <span id="user"></span></h1>
             <!-- App logo goes here -->
             <div class="dated-balance">
-                <h3>Current balance</h3>
-                <p id="today's-date"></p>
-                <h2 id="cal-balance"></h2>
+                <h3>Current Balance<i class="fa-regular fa-clock"></i></h3>
+                <div class="bal">
+                    <h2 id="cal-balance"></h2>
+                    <p id="today's-date"></p>
+                   
+                </div>
             </div>
 
             
