transaction summary section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
         </header>
         <main>
-            <div class="transaction-summarry">
+            <div class="transaction-summary">
 
             </div>
             <div id="credit-debit-summary">
@@ -44,21 +44,21 @@
                     <h2>Transfer money</h2>
                     <form>
                        <label for="account">
-                        <input type="text" name="username" required>
+                        <input type="text" name="username" id="account" required>
                         Transfer to
                        </label> 
                        <label for="amount">
-                        <input type="tel" name="username" required>
+                        <input type="tel" name="username" id="amount" required>
                         Amount
                        </label>
                        <button>submit</button>
                     </form>
                 </section>
-                <section id="loan">
+                <section class="loan">
                     <h2>Request loan</h2>
                     <form>
-                        <label for="Amount">
-                            <input type="tel" name="amount" required>
+                        <label for="loan">
+                            <input type="tel" name="amount" id="loan" required>
                             Amount
                         </label>
                         <button>submit</button>
@@ -68,12 +68,12 @@
                     <h2>Close account</h2>
                     <form>
                        <label for="account-username">
-                        <input type="text" name="username" required>
-                        Transfer to
+                        <input type="text" name="username" id="account-username" required>
+                        Username
                        </label> 
-                       <label for="amount">
-                        <input type="tel" name="username" required>
-                        Amount
+                       <label for="pin">
+                        <input type="tel" name="price" id="pin" required>
+                        Pin
                        </label>
                        <button>submit</button>
                     </form>
