history of the sum of credits and debits made

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <main>
             <div class="transaction-summary"></div>
             <div id="credit-debit-summary">
-
+               <p>IN <span id="credit">$0</span></p> 
+               <p>OUT <span id="debit">$0</span></p>   
             </div>
             <div class="make-transactions">
                 <section id="transfer">
@@ -51,7 +52,7 @@
                         <input type="tel" name="username" id="amount" required>
                         Amount
                        </label>
-                       <button>submit</button>
+                       <button>send</button>
                     </form>
                 </section>
                 <section class="loan">
@@ -61,7 +62,7 @@
                             <input type="tel" name="amount" id="loan" required>
                             Amount
                         </label>
-                        <button>submit</button>
+                        <button>request</button>
                     </form>
                 </section>
                 <section id="close-account">
